--- a/checkout.html
+++ b/checkout.html
@@ -30,7 +30,6 @@
       document.addEventListener("DOMContentLoaded", async () => {
         let lastUrl = window.location.href;
         const iframe = document.getElementById("lapinopay-checkout");
-        let isChangedUrl = false;
         const STORAGE_KEY = "lapinopay_checkout_hash";
         const EXPIRATION_TIME = 10 * 60 * 1000; // 10 minutes in milliseconds
 
@@ -66,6 +65,7 @@
             fullUrl = storedHash;
             // Restore the hash to URL
             window.location.hash = storedHash;
+            window.location.reload();
             return; // This will trigger a page reload with the hash
           }
         }
@@ -74,25 +74,6 @@
 
         if (fullUrl) {
           try {
-            if (
-              !navigator.mediaDevices ||
-              !navigator.mediaDevices.getUserMedia
-            ) {
-              throw new Error(
-                "Camera access is not supported in this browser."
-              );
-            }
-
-            const stream = await navigator.mediaDevices.getUserMedia({
-              video: true,
-            });
-            console.log("Camera access granted:", stream);
-
-            const videoElement = document.querySelector("video");
-            if (videoElement) {
-              videoElement.srcObject = stream;
-            }
-
             const decodedUrl = decodeURIComponent(fullUrl);
             iframe.src = decodedUrl;
 
@@ -142,6 +123,20 @@
         };
 
         setInterval(checkUrlChange, 1000);
+
+        if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+          throw new Error("Camera access is not supported in this browser.");
+        }
+
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: true,
+        });
+        console.log("Camera access granted:", stream);
+
+        const videoElement = document.querySelector("video");
+        if (videoElement) {
+          videoElement.srcObject = stream;
+        }
       });
     </script>
   </body>
